added test using servlet to make sure arquillian dependencies do not influence results